--- a/src/App.css
+++ b/src/App.css
@@ -16,3 +16,13 @@ div{
     padding: 3rem;
     font-size: 3rem;
 }
+
+@media (max-width: 800px) {
+    div {
+      font-size: 2rem;
+
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+}
