--- a/src/components/UI/juego/Juego.css
+++ b/src/components/UI/juego/Juego.css
@@ -48,5 +48,15 @@ body.bodyGreen{
     }
 
   input[type="number"] {
-    -moz-appearance: textfield; /* Firefox */
+    -moz-appearance: textfield;
   }
+
+  @media (max-width: 800px) {
+    .botones {
+      font-size: 2rem; 
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+  }
+
